# Project-drone

./: 3dcam单目.txt  README.md  main.cpp  stereoParam.txt
3dcam/: CMakeLists.txt  Makefile  camera  camera.cpp  cmake_install.cmake
contours/: CMakeLists.txt  ImageSet.cpp  SingleImg.cpp  VideoRead.cpp  VideoReadVer2.cpp  videoRect.cpp
dji_sdk_demo/: CMakeLists.txt  package.xml
dji_sdk_demo/launch/: dji_sdk_client.launch
dji_sdk_demo/src/: GimbalSearch.cpp  client.cpp  gapthrough.cpp  taskVer0.1.cpp  taskVer0.2.cpp  taskVer0.3(Gps Location Based).cpp  taskVer0.4.cpp  taskVer0.5(Gpa Through done).cpp  taskVer0.5(fligtThrough).cpp
